# thebook

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: fs_utils.rs  main.rs  tui.rs
