[package]
name = "thebook"
version = "0.1.2"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Search and read The Rust Book from the terminal"
readme = "README.md"
homepage = "https://github.com/0xhiro/thebook"
repository = "https://github.com/0xhiro/thebook"
keywords = ["book", "thebook", "cli" , "learn", "rust-book"]
categories = ["command-line-utilities"]

[dependencies]
dirs = "4.0.0"
webbrowser = "0.8.2"
termimad = "0.20.3"
crossterm = "0.23.1"
walkdir = "2.3.2"